--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
 		<meta name="msapplication-TileColor" content="#000000" />
+		<meta name="mobile-web-app-capable" content="yes">
 
 		<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
